[package]
name        = "tokimo-app-minesweeper"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo Minesweeper app: pure-frontend game, no DB."
repository  = "https://github.com/tokimo-lab/tokimo-app-minesweeper"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
axum               = { version = "0.8" }

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
